Fix interstitial pages not updating the task manager renderers' titles and favicons

After we fixed the WebContentsObserver::TitleWasSet() events not being emitted in some cases
including the interstitial pages in this CL: https://codereview.chromium.org/2086423005/,
we now make sure that the favicon is also updated when the title changes.
We also use the DidFinishNavigation() instead of DidNavigateMainFrame().

Screen recording: https://drive.google.com/a/google.com/file/d/0B6G_-uQnf1_LX0VtUnNWaEd6cUU/view?usp=sharing

BUG=607074

Review-Url: https://codereview.chromium.org/2148083002
Cr-Commit-Position: refs/heads/master@{#405519}

Former-commit-id: 707a8b14b3a547d21668166d062d57a9c55767ba